--- a/Laboratorio-03/src/scss/base/_variables.scss
+++ b/Laboratorio-03/src/scss/base/_variables.scss
@@ -5,12 +5,20 @@ $main_font: 'Montserrat', sans-serif;
 // colors
 $verde: #4CB8B3;
 $rosa: #F53756;
+$rosaSuave: #f396a5;
+$rosaBlanco:#fac8d0;
 
 $amarillo: #FEF46D;
 $morado: #752F97;
 $negro: #000000;
 $blanco: #FFFFFF;
 $grisOscuro: #333333;
+$grisClaro: #CCCCCC;
+$h3-color: rgba(0,0,0,.1);
+
+$border-radius: 15px;
+
+
 
 $separacion: 5rem;
 
@@ -19,4 +27,5 @@ $telefono: 480px;
 $tablet: 768px;
 $desktop: 992px;
 $desktopXL: 1200px;
+
 
