--- a/Laboratorio-03/src/scss/base/_normalize.scss
+++ b/Laboratorio-03/src/scss/base/_normalize.scss
@@ -22,6 +22,7 @@
   
   body {
     margin: 0;
+    padding: 0;
   }
   
   /**
@@ -145,9 +146,7 @@
    * Remove the border on images inside links in IE 10.
    */
   
-  img {
-    border-style: none;
-  }
+  
   
   /* Forms
      ========================================================================== */
